src/textarea/textarea.less
.textarea-component {
    display: flex;

    textarea {
        height: auto;

        &:focus {
            outline: none;
            box-shadow: 0 0 1px fade(@info, 50%);
        }

        &[disabled] {
            background: @gray-light;
            cursor: not-allowed;
        }
    }

    .text-limit {
        border-radius: 100%;
        height: 12px;
        width: 14px;
        color: @gray-darker;
        text-align: center;
        margin: 5px auto auto;
        letter-spacing: 0;
        font-size: 10px;
    }

    circle {
        stroke-width: 1;
        fill: @white;
    }

    #gray {
        stroke: @gray-stone;
    }

    .error-text {
        stroke: @error;
    }

    .normal-text {
        stroke: @gray-darker
    }

    .character-limited::-webkit-scrollbar {
        width: 0.3em;
        cursor: pointer;
    }

    .character-limited {
        resize: none;
        scrollbar-color:  @gray-dark;
        scrollbar-width: 0.3em;
    }

    .character-limited::-webkit-scrollbar-track {
        box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
    }

    .character-limited::-webkit-scrollbar-thumb {
        background-color: @gray-dark;
        outline: 1px solid @gray-darker;
        border-radius: 10px;
    }

    .character-limit-circle {
        height: 24px;
        width: 24px;
        text-align: center;
        margin-left: -30px;
        align-self: flex-end;
        margin-bottom: 5px;
        font-size: 10px;
        z-index: 2;
    }

}

